Убрал csrf токен из формы поиска, разделил запрос на тип событий и инициализацию vis.js Попытался поправить повторные запросы при UploadEventsAjax, пока не смог

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
 </body>
 <div class="container-fluid">
     <div class="row">
-        <form id="search" method="POST" action="{% url 'search' %}" class="post-form form-inline">{% csrf_token %}
+        <form id="search" method="POST" action="{% url 'search' %}" class="post-form form-inline">
             <div class="row">
                 {{ form.name }}
                 <button id="find_btn" type="submit" class="save btn btn-success">Найти</button>
